--- a/Kailh.html
+++ b/Kailh.html
@@ -45,7 +45,7 @@
       </article>
       <!-- SteelSeries QS1 -->
       <article class="col-2 articleBox">
-        <img src="Content/Media/kailhQS1.png" class="maxSwSize" alt="Kailh sin Razer orange tast">
+        <img src="Content/Media/kailhQS1.png" class="maxSwSize" alt="Kailh sin SteelSeries QS1">
       </article>
 
       <article class="col-8 articleBox">
