--- a/Kailh.html
+++ b/Kailh.html
@@ -15,7 +15,7 @@
         <a href="FAQ.html" class="dropdownContentBox">FAQ</a><br>
         <a href="Manufacturers.html" class="dropdownContentBox">Produsenter</a><br>
         <a href="CherryCorp.html" class="dropdownContentBox">Cherry</a><br>
-        <a href="Kailh.html" class="dropdownContentBox">Khail</a><br>
+        <a href="Kailh.html" class="dropdownContentBox">Kailh</a><br>
         <a href="Omron.html" class="dropdownContentBox">Omron</a><br>
         <a href="Gateron.html" class="dropdownContentBox">Gateron</a><br>
         <a href="Topre.html" class="dropdownContentBox">Topre</a><br>
@@ -41,11 +41,11 @@
       </article>
 
       <article class="col-8 articleBox">
-        Razer green er en tast laget i sammarbeid av Razer og Kailh. Den er brukt i Razer sine Blackwidow og Orbweaver tastatur. Razer orange sin aktiveringsmetode er lik Cherry sin MX Red variant.
+        Razer orange er en tast laget i sammarbeid av Razer og Kailh. Den er brukt i Razer sine Blackwidow og Orbweaver tastatur. Razer orange sin aktiveringsmetode er lik Cherry sin MX Red variant.
       </article>
       <!-- SteelSeries QS1 -->
       <article class="col-2 articleBox">
-        <img src="Content/Media/kailhQS1.png" class="maxSwSize" alt="Kailh sin SteelSeries QS1">
+        <img src="Content/Media/KailhQS1.png" class="maxSwSize" alt="Kailh sin QS1 tast">
       </article>
 
       <article class="col-8 articleBox">
@@ -57,6 +57,6 @@
 
   <footer class="frontFooter">
     Alle bilder er Public Domain<br>
-    Siden er laget av Sander Joachim Skarmyr og er beskyttet av åndverksloven
+    Siden er laget av Sander Joachim Skarmyr og er beskyttet av åndsverksloven
   </footer>
 </body>
