--- a/Gateron.html
+++ b/Gateron.html
@@ -15,7 +15,7 @@
         <a href="FAQ.html" class="dropdownContentBox">FAQ</a><br>
         <a href="Manufacturers.html" class="dropdownContentBox">Produsenter</a><br>
         <a href="CherryCorp.html" class="dropdownContentBox">Cherry</a><br>
-        <a href="Kailh.html" class="dropdownContentBox">Khail</a><br>
+        <a href="Kailh.html" class="dropdownContentBox">Kailh</a><br>
         <a href="Omron.html" class="dropdownContentBox">Omron</a><br>
         <a href="Gateron.html" class="dropdownContentBox">Gateron</a><br>
         <a href="Topre.html" class="dropdownContentBox">Topre</a><br>
@@ -56,6 +56,6 @@
 
   <footer class="frontFooter">
     Alle bilder er Public Domain<br>
-    Siden er laget av Sander Joachim Skarmyr og er beskyttet av åndverksloven
+    Siden er laget av Sander Joachim Skarmyr og er beskyttet av åndsverksloven
   </footer>
 </body>
